EXTRA_DIST = \
alpha01.fsf \
alpha02.fsf \
alpha03.fsf \
alpha04.fsf \
alpha05.fsf \
alpha06.fsf \
alpha07.fsf \
alpha08.fsf \
mandelbrot3.fsf \
mandelbrot.fsf \
q1.fsf \
q2.fsf \
q3.fsf \
q4.fsf \
q5.fsf \
q6.fsf \
q7.fsf \
q8.fsf \
q9.fsf \
qA.fsf \
qB.fsf \
qD.fsf \
qE.fsf \
qF.fsf \
qG.fsf \
qH.fsf \
qI.fsf \
qJ.fsf \
qK.fsf \
scenarios.conf \
t0.fsf \
t1.fsf \
t2.fsf \
t3.fsf \
t4.fsf \
t5.fsf \
w1.fsf \
w2.fsf \
w3.fsf \
w4.fsf \
w5.fsf \
w6.fsf \
w7.fsf \
w8.fsf \
w9.fsf \
wA.fsf \
wB.fsf \
wC.fsf \
wD.fsf \
wE.fsf \
wF.fsf \
wG.fsf \
wH.fsf
