fgpconfigdir = $(datadir)/fgpconfig
dist_fgpconfig_DATA = \
input-100.fsf \
input-101.fsf \
input-102.fsf \
input-103.fsf \
input-104.fsf \
input-105.fsf \
input-106.fsf \
input-107.fsf \
input-108.fsf \
input-109.fsf \
input-110.fsf \
input-111.fsf \
input-112.fsf \
input-113.fsf \
input-114.fsf \
input-115.fsf \
input-116.fsf \
input-117.fsf \
input-118.fsf \
input-119.fsf \
input-120.fsf \
input-121.fsf \
input-122.fsf \
input-123.fsf \
input-124.fsf \
input-125.fsf \
input-126.fsf \
input-127.fsf \
input-128.fsf \
input-129.fsf \
input-130.fsf \
input-131.fsf \
input-132.fsf \
input-133.fsf \
input-134.fsf \
input-135.fsf \
input-136.fsf \
input-137.fsf \
input-138.fsf \
input-139.fsf \
input-140.fsf \
input-141.fsf \
input-142.fsf \
input-143.fsf \
input-144.fsf \
input-145.fsf \
input-146.fsf \
input-147.fsf \
input-148.fsf \
input-149.fsf \
input-150.fsf \
input-151.fsf \
input-152.fsf \
input-153.fsf \
input-154.fsf \
input-155.fsf \
input-156.fsf \
input-157.fsf \
input-158.fsf \
input-159.fsf \
input-160.fsf \
input-161.fsf \
input-10.fsf \
input-11.fsf \
input-12.fsf \
input-13.fsf \
input-14.fsf \
input-15.fsf \
input-16.fsf \
input-17.fsf \
input-18.fsf \
input-19.fsf \
input-20.fsf \
input-21.fsf \
input-22.fsf \
input-23.fsf \
input-24.fsf \
input-25.fsf \
input-26.fsf \
input-27.fsf \
input-28.fsf \
input-29.fsf \
input-30.fsf \
input-31.fsf \
input-32.fsf \
input-33.fsf \
input-34.fsf \
input-35.fsf \
input-36.fsf \
input-37.fsf \
input-38.fsf \
input-39.fsf \
input-40.fsf \
input-41.fsf \
input-42.fsf \
input-43.fsf \
input-44.fsf \
input-45.fsf \
input-46.fsf \
input-47.fsf \
input-48.fsf \
input-49.fsf \
input-50.fsf \
input-51.fsf \
input-52.fsf \
input-53.fsf \
input-54.fsf \
input-55.fsf \
input-56.fsf \
input-57.fsf \
input-58.fsf \
input-59.fsf \
input-60.fsf \
input-61.fsf \
input-62.fsf \
input-63.fsf \
input-64.fsf \
input-65.fsf \
input-66.fsf \
input-67.fsf \
input-68.fsf \
input-69.fsf \
input-70.fsf \
input-71.fsf \
input-72.fsf \
input-73.fsf \
input-74.fsf \
input-75.fsf \
input-76.fsf \
input-77.fsf \
input-78.fsf \
input-79.fsf \
input-80.fsf \
input-81.fsf \
input-82.fsf \
input-83.fsf \
input-84.fsf \
input-85.fsf \
input-86.fsf \
input-87.fsf \
input-88.fsf \
input-89.fsf \
input-90.fsf \
input-91.fsf \
input-92.fsf \
input-93.fsf \
input-94.fsf \
input-95.fsf \
input-96.fsf \
input-97.fsf \
input-98.fsf \
input-99.fsf \
input-0.fsf \
input-1.fsf \
input-2.fsf \
input-3.fsf \
input-4.fsf \
input-5.fsf \
input-6.fsf \
input-7.fsf \
input-8.fsf \
input-9.fsf
