# $Id$
# --------------------------------------------------------------------------
#
#              //===//   //=====   //===//   //       //   //===//
#             //    //  //        //    //  //       //   //    //
#            //===//   //=====   //===//   //       //   //===<<
#           //   \\         //  //        //       //   //    //
#          //     \\  =====//  //        //=====  //   //===//    Version II
#
# ------------- An Efficient RSerPool Prototype Implementation -------------
#
# Copyright (C) 2002-2017 by Thomas Dreibholz
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
# Contact: dreibh@iem.uni-due.de

fgpconfigdir = $(datadir)/fgpconfig
dist_fgpconfig_DATA = \
input-001.fsf \
input-002.fsf \
input-003.fsf \
input-004.fsf \
input-005.fsf \
input-006.fsf \
input-007.fsf \
input-008.fsf \
input-009.fsf \
input-010.fsf \
input-011.fsf \
input-012.fsf \
input-013.fsf \
input-014.fsf \
input-015.fsf \
input-016.fsf \
input-017.fsf \
input-018.fsf \
input-019.fsf \
input-020.fsf \
input-021.fsf \
input-022.fsf \
input-023.fsf \
input-024.fsf \
input-025.fsf \
input-026.fsf \
input-027.fsf \
input-028.fsf \
input-029.fsf \
input-030.fsf \
input-031.fsf \
input-032.fsf \
input-033.fsf \
input-034.fsf \
input-035.fsf \
input-036.fsf \
input-037.fsf \
input-038.fsf \
input-039.fsf \
input-040.fsf \
input-041.fsf \
input-042.fsf \
input-043.fsf \
input-044.fsf \
input-045.fsf \
input-046.fsf \
input-047.fsf \
input-048.fsf \
input-049.fsf \
input-050.fsf \
input-051.fsf \
input-052.fsf \
input-053.fsf \
input-054.fsf \
input-055.fsf \
input-056.fsf \
input-057.fsf \
input-058.fsf \
input-059.fsf \
input-060.fsf \
input-061.fsf \
input-062.fsf \
input-063.fsf \
input-064.fsf \
input-065.fsf \
input-066.fsf \
input-067.fsf \
input-068.fsf \
input-069.fsf \
input-070.fsf \
input-071.fsf \
input-072.fsf \
input-073.fsf \
input-074.fsf \
input-075.fsf \
input-076.fsf \
input-077.fsf \
input-078.fsf \
input-079.fsf \
input-080.fsf \
input-081.fsf \
input-082.fsf \
input-083.fsf \
input-084.fsf \
input-085.fsf \
input-086.fsf \
input-087.fsf \
input-088.fsf \
input-089.fsf \
input-090.fsf \
input-091.fsf \
input-092.fsf \
input-093.fsf \
input-094.fsf \
input-095.fsf \
input-096.fsf \
input-097.fsf \
input-098.fsf \
input-099.fsf \
input-100.fsf \
input-101.fsf \
input-102.fsf \
input-103.fsf \
input-104.fsf \
input-105.fsf \
input-106.fsf \
input-107.fsf \
input-108.fsf \
input-109.fsf \
input-110.fsf \
input-111.fsf \
input-112.fsf \
input-113.fsf \
input-114.fsf \
input-115.fsf \
input-116.fsf \
input-117.fsf \
input-118.fsf \
input-119.fsf \
input-120.fsf \
input-121.fsf \
input-122.fsf \
input-123.fsf \
input-124.fsf \
input-125.fsf \
input-126.fsf \
input-127.fsf \
input-128.fsf \
input-129.fsf \
input-130.fsf \
input-131.fsf \
input-132.fsf \
input-133.fsf \
input-134.fsf \
input-135.fsf \
input-136.fsf \
input-137.fsf \
input-138.fsf \
input-139.fsf \
input-140.fsf \
input-141.fsf \
input-142.fsf \
input-143.fsf \
input-144.fsf \
input-145.fsf \
input-146.fsf \
input-147.fsf \
input-148.fsf \
input-149.fsf \
input-150.fsf \
input-151.fsf \
input-152.fsf \
input-153.fsf \
input-154.fsf \
input-155.fsf \
input-156.fsf \
input-157.fsf \
input-158.fsf \
input-159.fsf \
input-160.fsf \
input-161.fsf \
input-162.fsf \
input-163.fsf \
input-164.fsf \
input-165.fsf \
input-166.fsf \
input-167.fsf \
input-168.fsf \
input-169.fsf \
input-170.fsf \
input-171.fsf \
input-172.fsf \
input-173.fsf \
input-174.fsf \
input-175.fsf \
input-176.fsf \
input-177.fsf \
input-178.fsf \
input-179.fsf \
input-180.fsf \
input-181.fsf \
input-182.fsf \
input-183.fsf \
input-184.fsf \
input-185.fsf \
input-186.fsf \
input-187.fsf \
input-188.fsf \
input-189.fsf \
input-190.fsf \
input-191.fsf \
input-192.fsf \
input-193.fsf \
input-194.fsf \
input-195.fsf \
input-196.fsf \
input-197.fsf \
input-198.fsf \
input-199.fsf \
input-200.fsf \
input-201.fsf \
input-202.fsf \
input-203.fsf \
input-204.fsf \
input-205.fsf \
input-206.fsf \
input-207.fsf \
input-208.fsf \
input-209.fsf \
input-210.fsf \
input-211.fsf \
input-212.fsf \
input-213.fsf \
input-214.fsf \
input-215.fsf \
input-216.fsf \
input-217.fsf \
input-218.fsf \
input-219.fsf \
input-220.fsf \
input-221.fsf \
input-222.fsf \
input-223.fsf \
input-224.fsf \
input-225.fsf \
input-226.fsf \
input-227.fsf \
input-228.fsf \
input-229.fsf \
input-230.fsf \
input-231.fsf \
input-232.fsf \
input-233.fsf \
input-234.fsf \
input-235.fsf \
input-236.fsf \
input-237.fsf \
input-238.fsf \
input-239.fsf \
input-240.fsf \
input-241.fsf \
input-242.fsf \
input-243.fsf \
input-244.fsf \
input-245.fsf \
input-246.fsf \
input-247.fsf \
input-248.fsf \
input-249.fsf \
input-250.fsf
